# libecc

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: toolchain.cmake
